--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Custom Video Player</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- New Video Source -- Mixkit -- https://mixkit.co -->
+
+    <!-- Cars on Rainy Street -->
+    <!-- https://assets.mixkit.co/videos/preview/mixkit-cars-heading-through-heavy-rain-27704-large.mp4 -->
+    <!-- Thunderstorm -->
+    <!-- https://assets.mixkit.co/videos/preview/mixkit-thunderstorm-at-night-4422-large.mp4 -->
+    <!-- Car Driving -->
+    <!-- https://assets.mixkit.co/videos/preview/mixkit-highway-in-the-middle-of-a-mountain-range-4633-large.mp4 -->
+
+    <!-- Script -->
+    <script src="script.js"></script>
+  </body>
 </html>
