add volume control

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     <!-- https://assets.mixkit.co/videos/preview/mixkit-highway-in-the-middle-of-a-mountain-range-4633-large.mp4 -->
 
     <!-- https://assets.mixkit.co/videos/preview/mixkit-forest-stream-in-the-sunlight-529-large.mp4 -->
+    <!-- https://pixabay.com/pl/videos/download/video-30902_medium.mp4?attachment -->
 
     <div class="player">
       <video
-        src="https://assets.mixkit.co/videos/preview/mixkit-forest-stream-in-the-sunlight-529-large.mp4"
+        src="https://pixabay.com/pl/videos/download/video-30902_medium.mp4?attachment"
         class="video"
         playsinline
       ></video>
